# pi-eink

./: .gitignore  CMakeLists.txt  example_usage.c  lv_conf.defaults
bcm2835_75T7/: epd  epd4in2.cpp  epd4in2.h  epdif.cpp  epdif.h  imagedata.cpp  imagedata.h  main.cpp
bcm2835_75T7_example/: epd  epd4in2.cpp  epd4in2.h  imagedata.cpp  imagedata.h  main.cpp
configs/: fbdev.defaults  sdl.defaults
epd/: CMakeLists.txt
epd/inc/: project_settings.h
epd/inc/drivers/: epd.h  gpio.h  gt911.h  i2c.h  spi.h
epd/inc/utils/: err.h  image.h  time.h  timer.h  utilities.h
epd/src/: epd_test.c  testcmlst.txt
epd/src/drivers/: epd.c  gpio.c  gt911.c  i2c.c  spi.c
epd/src/utils/: image.c  time.c  timer.c  timer_example.c
inc/: img.h  project_settings.h
inc/drivers/: epd.h  gpio.h  gt911.h  i2c.h  spi.h
inc/utils/: image.h  time.h  utilities.h
src/: CMakeLists.txt  main.c
src/drivers/: epd.c  gpio.c  gt911.c  i2c.c  spi.c
src/utils/: image.c  spi.c  time.c  utilities.c
